--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -5,6 +5,16 @@
   padding: 8% 0 0;
   margin: auto;
 }
+.register-form {
+  position: relative;
+  z-index: 1;
+  background: #FFFFFF;
+  max-width: 500px;
+  margin: 0 auto 100px;
+  padding: 45px;
+  text-align: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
 .form {
   position: relative;
   z-index: 1;
@@ -22,7 +32,7 @@
   width: 100%;
   border: 0;
   margin: 0 0 15px;
-  padding: 15px;
+  padding: 10px 15px 10px 15px;
   box-sizing: border-box;
   font-size: 14px;
 }
