Rudimentary Profile Page and Club-Detail-Component

--- a/src/app/nav-bar/laz-navbar.html
+++ b/src/app/nav-bar/laz-navbar.html
@@ -14,13 +14,13 @@
         <a class="nav-link" routerLink="/beans" routerLinkActive="active">LAZBEANS</a>
       </li>
       <li class="nav-item mr-4">
-        <a class="nav-link" routerLink="/resources" routerLinkActive="active">RESOURCES</a>
+        <a class="nav-link" routerLink="/profile" routerLinkActive="active">PROFILE</a>
       </li>
       <li class="nav-item mr-4">
         <a class="nav-link" routerLink="/clubs" routerLinkActive="active">GET INVOLVED</a>
       </li>
       <li class="nav-item mr-4">
-        <a class="nav-link" routerLink="/fullteam" routerLinkActive="active">LOGIN</a>
+        <a class="nav-link" routerLink="/login/login" routerLinkActive="active">LOGIN</a>
       </li>
       <li class="nav-item mr-4">
         <a class="nav-link" routerLink="/compose" routerLinkActive="active">COMPOSE</a>
