--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,8 @@
   <div class="row justify-content-center">
 
     <div class="col-sm-6 col-md-6 col-lg-6">
-      <div *ngIf="state === 'LOGIN'">
+      {{state}}
+      <div *ngIf="state === 'login'">
         <button type="button" class="btn btn-primary" (click)="signIn()">Sign in</button>
         <button type="button" class="btn btn-primary" (click)="signOut()">Sign out</button>
         <button type="button" class="btn btn-primary" (click)="state = 'REGISTER'">Register</button>
