--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -27,3 +27,42 @@
   font-family: Calluna-Black;
   src: url('../assets/fonts/CallunaSansBlack.otf');
 }
+
+@font-face {
+  font-family: Lato-Black;
+  src: url('../assets/fonts/Lato/Lato-Black.ttf');
+}
+
+@font-face {
+  font-family: Lato-Bold;
+  src: url('../assets/fonts/Lato/Lato-Bold.ttf');
+}
+
+@font-face {
+  font-family: Lato-Bold-Italic;
+  src: url('../assets/fonts/Lato/Lato-BoldItalic.ttf');
+}
+
+@font-face {
+  font-family: Lato-Regular;
+  src: url('../assets/fonts/Lato/Lato-Regular.ttf');
+}
+
+@font-face {
+  font-family: Lato-Semibold;
+  src: url('../assets/fonts/Lato/Lato-Semibold.ttf');
+}
+
+@font-face {
+  font-family: Lato-Medium;
+  src: url('../assets/fonts/Lato/Lato-Medium.ttf');
+}
+
+@font-face {
+  font-family: Lato-Italic;
+  src: url('../assets/fonts/Lato/Lato-Italic.ttf');
+}
+@font-face {
+  font-family: Lato-Heavy;
+  src: url('../assets/fonts/Lato/Lato-Heavy.ttf');
+}
