--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,6 @@
       <router-outlet></router-outlet>
     </div>
   </div> -->
-  User signed in?
-  {{authService.userSignedIn$ | async}}
+  <!-- User signed in?
+  {{authService.userSignedIn$ | async}} -->
   <router-outlet></router-outlet>
