--- a/src/app/club-detail/club-detail.component.html
+++ b/src/app/club-detail/club-detail.component.html
@@ -1,11 +1,11 @@
 <div class="container-fluid" style="background-color:#F5F5F5">
-	<div class="row justify-content-center">
-  	<div class="col-sm-7 col-md-7 col-lg-7 mt-4">
+	<div class="row">
+  	<div class="col-sm-8 col-md-8 col-lg-8 mt-4 left-content-pane">
       <div class="card">
         <div class="card-img-top">
-          <img class="card-img-top club-banner" src="assets/img/banners/TAP-Banner-Alternate.jpg">
+          <img class="card-img-top club-banner" src="assets/img/{{club.app_banner}}">
         </div>
-        <img src="assets/img/thumbnails/TAP-Logo-Alternate.png" class="club-avatar">
+        <img src="assets/img/thumbnails/{{club.app_logo}}" class="club-avatar">
         <div class="card-block">
           <div class="row">
             <div class="col-sm-4 col-md-4 col-lg-4">
@@ -14,20 +14,19 @@
               </div>
             </div>
             <div class="col-sm-8 col-md-8 col-lg-8" style="padding:none">
-              <span class="club-title">The Advertising Project</span><br>
+              <span class="club-title">{{club.name}}</span><br>
               <span class="club-tags">Advertising &bull; Marketing &bull; Design</span>
               <br><br>
               <span class="club-detail-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque consectetur
-  ante at venenatis ornare. Nullam gravida neque sit amet nunc aliquam pharetra. Nulla pulvinar justo in lectus sagittis sodales. Quisque consectetur ante at venenatis ornare. Nullam gravida neque sit amet nunc aliquam pharetra.
+                {{club.description}}
               </span>
             </div>
           </div>
         </div>
       </div>
       <div class="row mt-2">
-        <div class="col-sm-4 col-md-4 col-lg-4 pr-1">
-          <div class="card">
+        <div class="col-sm-4 col-md-4 col-lg-4">
+          <div class="card sticky">
             <h3 class="card-header card-header-text">View</h3>
             <!-- <div class="card-block">
 
@@ -49,7 +48,7 @@
           </div>
         </div>
         <div class="col-sm-8 col-md-8 col-lg-8 pl-1">
-          <div class="card">
+          <div class="card sticky">
             <h3 class="card-header card-header-text">About</h3>
             <div class="card-block">
               <h2 style="font-family:Lato-Bold; font-size:16px;">Who are we?</h2>
@@ -60,10 +59,8 @@ ante at venenatis ornare. Nullam gravida neque sit amet nunc aliquam pharetra. N
         </div>
       </div>
     </div>
-    <div class="col-sm-4 col-md-4 col-lg-4 mt-4">
-      <div class="card">
-        More content
-      </div>
+    <div class="col-sm-3 col-md-3 col-lg-3 mt-4" style="padding-left:0">
+      <job-posting-sidebar></job-posting-sidebar>
     </div>
   </div>
 </div>
