--- a/src/app/job-detail-page/job-detail-page.component.html
+++ b/src/app/job-detail-page/job-detail-page.component.html
@@ -5,10 +5,11 @@
       <span class="title-font">{{posting.title}}</span><br/>
       <span class="job-detail">{{posting.description}}</span>
       <br/><br/>
-      <div class="form-group" *ngFor="let question of posting.job_posting_questions">
+      <div class="form-group" *ngFor="let question of posting.job_posting_questions; let i = index">
         <label for="exampleInputEmail1"><b>{{question.question}}</b></label>
-        <textarea rows="3" style="width:100%" required></textarea>
+        <textarea rows="3" style="width:100%" required [(ngModel)]="jobApplication.job_question_answers_attributes[i].answer"></textarea>
       </div>
+      <button type="button" class="btn btn-primary" (click)="submitJobApp()">Submit!</button>
     </div>
   </div>
 </div>
