--- a/src/app/beans/beans.component.html
+++ b/src/app/beans/beans.component.html
@@ -1,3 +1,15 @@
 <h1>LazBeans</h1>
 
 <button type="button" class="btn btn-primary" (click)="getBeans()">Get Beans (see console)</button>
+
+<hr>
+<h3>Messaging Test</h3>
+<p>A conversation between User.find(1) and User.find(2)</p>
+
+<button type="button" class="btn btn-primary" (click)="startConversation()">Start Conversation Between user1 and user2 (i.e. "connect")</button>
+<br>
+<button type="button" class="btn btn-primary" (click)="getConversations()">Get Signed in User's Conversations (see console)</button>
+<br>
+<button type="button" class="btn btn-primary" (click)="displayConversation()">Display Conversation Between user1 and user2 (see console)</button>
+<br>
+<button type="button" class="btn btn-primary" (click)="sendMessage()">  Sending message between user1 and user2 (see console)</button>
