--- a/src/app/newsfeed/newsfeed.component.html
+++ b/src/app/newsfeed/newsfeed.component.html
@@ -19,7 +19,7 @@
                 </div>
               </div>
               <div class="card-text mb-2">
-                  {{event.event_description}}
+                  {{event.sub_heading}}
               </div>
             </div>
             <div class="card-footer py-2">
