--- a/src/app/beans/beans.component.html
+++ b/src/app/beans/beans.component.html
@@ -1,12 +1,12 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-sm-7 col-md-7 col-lg-7" style="margin-top:45px">
-      <div class="d-flex flex-wrap">
+      <div class="d-flex flex-wrap" *ngIf="hasBeans">
         <div class="card mx-2" *ngFor="let bean of beans">
           <img src="https://media.giphy.com/media/26gsl2WC5tRxkemdi/giphy.gif" class="avatar">
           <div class="card-block">
             <br><br>
-            <span class="profile-name">Salt Bae</span><br>
+            <span class="profile-name">{{bean.first_name}}&nbsp;{{bean.last_name}}</span><br>
             <span class="profile-subheading">Laurier BBA Student</span>
             <div class="invite-button mt-4"><span>Invite</span></div>
             <div class="d-flex flex-wrap mt-4 justify-content-center">
