--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,12 +1,12 @@
 <div class="container-fluid">
   <div class="row justify-content-center">
-
     <div class="col-sm-6 col-md-6 col-lg-6">
       <div *ngIf="state === 'login'">
-        <button type="button" class="btn btn-primary" (click)="signIn()">Sign in</button>
-        <button type="button" class="btn btn-primary" (click)="signOut()">Sign out</button>
-        <button type="button" class="btn btn-primary" (click)="state = 'REGISTER'">Register</button>
-        <button type="button" class="btn btn-primary" (click)="state = 'UPDATE'">Update</button>
+        <button type="button" class="btn btn-primary" (click)="signIn()" *ngIf="!(authService.userSignedIn$ | async)">Sign in</button>
+        <button type="button" class="btn btn-primary" (click)="signOut()" *ngIf="(authService.userSignedIn$ | async)">Sign out</button>
+        <button type="button" class="btn btn-primary" (click)="state = 'REGISTER'" *ngIf="!(authService.userSignedIn$ | async)">Register</button>
+        <button type="button" class="btn btn-primary" (click)="state = 'UPDATE'" *ngIf="(authService.userSignedIn$ | async)">Update</button>
+
         <div class="login-page" *ngIf="!(authService.userSignedIn$ | async)" >
           <div class="form">
             <form class="register-form">
@@ -43,15 +43,16 @@
         </div>
       </div>
       <div class="" *ngIf="state === 'UPDATE'">
+        
         <div class="form-group">
           <label for="firstname">First Name</label>
-          <input type="email" class="form-control mb-3" id="firstname" [(ngModel)]="updateObj.firstName">
+          <input type="email" class="form-control mb-3" id="firstname" [(ngModel)]="updateObj.first_name">
           <label for="firstname">Last Name</label>
-          <input type="email" class="form-control mb-3" id="firstname" [(ngModel)]="updateObj.lastName">
+          <input type="email" class="form-control mb-3" id="firstname" [(ngModel)]="updateObj.last_name">
           <label for="firstname">Nickname</label>
           <input type="email" class="form-control mb-3" id="firstname" [(ngModel)]="updateObj.nickname">
           <label for="firstname">Work Experience</label>
-          <input type="email" class="form-control mb-3" id="firstname" [(ngModel)]="updateObj.workExp">
+          <input type="email" class="form-control mb-3" id="firstname" [(ngModel)]="updateObj.work_exp">
           <label for="firstname">School Program</label>
           <input type="email" class="form-control mb-3" id="firstname" [(ngModel)]="updateObj.program">
         </div>
