updated nav font

--- a/src/app/nav-bar/laz-navbar.css
+++ b/src/app/nav-bar/laz-navbar.css
@@ -1,7 +1,7 @@
 .navbar {
 
   /*background-color:#422c89;*/
-  font-family:Calluna-Semibold;
+  font-family:Lato-Regular;
   font-size:17px;
 }
 .gold-bar {
