Removed description from clubs page

--- a/src/app/clubs/clubs.component.html
+++ b/src/app/clubs/clubs.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" style="background-color:#F5F5F5">
+ w<div class="container-fluid" style="background-color:#F5F5F5">
   	<div class="row justify-content-center">
       	<div class="col-sm-3 col-md-3 col-lg-3 mt-4 px-2">
         	<profile-sidebar></profile-sidebar>
@@ -19,9 +19,9 @@
                     <div class="row container" id="bottom_margin_2">
                       <p class="tags" *ngFor="let tag of club.val.club_tags">{{tag.tag}} &bull; &nbsp;</p>
                     </div>
-                    <div class="line-clamp-wrapper">
+                    <!-- <div class="line-clamp-wrapper">
                       <p class="club-description line-clamp">{{club.val.description}}</p>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
             </div>
