--- a/src/app/club-detail/club-detail.component.css
+++ b/src/app/club-detail/club-detail.component.css
@@ -39,11 +39,18 @@
 .club-avatar {
   display: block;
   position:absolute;
-  transform: translate(15%, 70%);
+  transform: translate(15%, 80%);
   width: 22.2%;
   height:auto;
-  border-radius: 50%;
   border:5px solid white;
+}
+
+.club-event-avatar {
+  display: block;
+  width: 50px;
+  height:50px;
+  border-radius: 50%;
+  /*border: 1px solid darkgrey;*/
 }
 
 .club-card-text {
@@ -56,6 +63,27 @@
   color:#000000;
   letter-spacing:0;
   text-align:left;
+}
+
+.club-event-title {
+  font-size: 1.15em;
+  font-family:Lato-Bold;
+  line-height: 1.2857em;
+  font-weight:500;
+}
+
+.card-text {
+  font-family:Lato-Regular;
+  clear: both;
+  margin-top: .5em;
+  font-size:0.9em;
+  color: rgba(0, 0, 0, .68);
+}
+
+.card-datetime {
+  font-family:Lato-Regular;
+  font-size:14px;
+  color:#83868a;
 }
 
 .club-tags {
@@ -81,8 +109,7 @@
 }
 
 .subscribe-btn {
-  margin-top:33%;
-  margin-left:15%;
+  margin-top:1%;
   border:2px solid #433089;
   border-radius:2px;
   width:130px;
@@ -123,4 +150,9 @@
 
 .open-positions-icon {
   width:15%;
+}
+
+.icon {
+  height:18px;
+  margin-right:10px;
 }
