--- a/src/app/club-detail/club-detail.component.html
+++ b/src/app/club-detail/club-detail.component.html
@@ -34,24 +34,14 @@
             <!-- <div class="card-block">
 
             </div> -->
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">
-                Lorem
-              </li>
-              <li class="list-group-item">
-                Lorem
-              </li>
-              <li class="list-group-item">
-                Lorem
-              </li>
-              <li class="list-group-item">
-                Lorem
-              </li>
-            </ul>
+						<div class="list-group">
+							<button class="list-group-item list-group-item-action py-2" (click)="state = 'about'" [ngClass]="{active: state == 'about'}">About</button>
+							<button class="list-group-item list-group-item-action py-2" (click)="state = 'events'" [ngClass]="{active: state == 'events'}">Events</button>
+						</div>
           </div>
         </div>
         <div class="col-sm-8 col-md-8 col-lg-8 pl-1">
-          <div class="card sticky">
+          <div class="card sticky" *ngIf="state === 'about'">
             <h3 class="card-header card-header-text">About</h3>
             <div class="card-block">
 							<span class="club-detail-text">
@@ -59,28 +49,32 @@
 							</span>
             </div>
           </div>
-					<div class="mb-2" *ngFor="let event of newsfeed">
-						<div class="card" (click)="onSelect(event)">
-								<div class="card-block">
-									<div class="d-flex mb-2">
-										<img src="assets/img/thumbnails/{{club.app_logo}}" class="club-event-avatar mr-3" alt="">
-										<div class="d-flex flex-column">
-											<h4 class="club-event-title mb-1">{{event.title}}</h4>
-											<h4 class="card-datetime">{{event.start_date_time | getLongDate}}</h4>
+					<div *ngIf="state === 'events'">
+						<app-newsfeed [clubID]="club.id"></app-newsfeed>
+						<!-- <div class="mb-2" *ngFor="let event of newsfeed">
+							<div class="card" (click)="onSelect(event)">
+									<div class="card-block">
+										<div class="d-flex mb-2">
+											<img src="assets/img/thumbnails/{{club.app_logo}}" class="club-event-avatar mr-3" alt="">
+											<div class="d-flex flex-column">
+												<h4 class="club-event-title mb-1">{{event.title}}</h4>
+												<h4 class="card-datetime">{{event.start_date_time | getLongDate}}</h4>
+											</div>
+										</div>
+										<div class="card-text mb-2">
+												{{event.sub_heading}}
 										</div>
 									</div>
-									<div class="card-text mb-2">
-											{{event.sub_heading}}
+									<div class="card-footer py-2">
+										<img src="assets/img/icons/heart.svg" class="icon">
+										<img src="assets/img/icons/bookmark.svg" class="icon">
+										<img src="assets/img/icons/arrow.svg" class="icon">
+										<img src="assets/img/icons/three-dots.svg" class="icon" style="float:right">
 									</div>
-								</div>
-								<div class="card-footer py-2">
-									<img src="assets/img/icons/heart.svg" class="icon">
-									<img src="assets/img/icons/bookmark.svg" class="icon">
-									<img src="assets/img/icons/arrow.svg" class="icon">
-									<img src="assets/img/icons/three-dots.svg" class="icon" style="float:right">
-								</div>
-						</div>
+							</div>
+						</div> -->
 					</div>
+
         </div>
       </div>
     </div>
