--- a/src/app/newsfeed/newsfeed.component.html
+++ b/src/app/newsfeed/newsfeed.component.html
@@ -13,7 +13,7 @@
             </div>
           </div>
           <div class="card-text mb-2">
-              {{event.sub_heading}}
+              {{event.sub_heading}} <br>
           </div>
         </div>
         <div class="card-footer py-2">
