--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,24 +1,20 @@
 <div class="container-fluid">
   <div class="row justify-content-center">
     <div class="col-sm-9 col-md-9 col-lg-9">
-      <div class="card">
-        <div class="card-block">
-          <div class="d-flex flex-row">
-            <img src="https://media.giphy.com/media/26gsl2WC5tRxkemdi/giphy.gif" class="profile-img">
-            <div class="d-flex flex-column" style="transform:translate(0,4em)">
-              <h2 class="name-font">Richard Hugessen</h2>
-              <h2 class="program">BBA/Computer Science Double Degree</h2>
-              <div class="d-flex flex-row">
-                <img src="assets/img/facebook_logo.png" class="social-logo mr-2">
-                <img src="assets/img/twitter_logo.png" class="social-logo mr-2">
-                <img src="assets/img/linkedin_logo.png" class="social-logo mr-2">
-                <img src="assets/img/instagram_logo.png" class="social-logo mr-2">
-              </div>
-            </div>
-          </div>
-          <button type="button" class="btn btn-primary mt-2" routerLink="/fullteam">Update Profile</button>
+      <div class="card mt-4">
+        <div class="card-img-top">
+          <img src="https://s3-us-west-1.amazonaws.com/bgimglibrary/LinkedIn-Background-Image-62.png" class="card-img-top banner-img">
+        </div>
+        <img src="https://media.giphy.com/media/26gsl2WC5tRxkemdi/giphy.gif" class="profile-img">
+        <div class="card-block" style="text-align:center">
+          <br><br><br>
+          <h2 class="name-font">{{tokenService.currentUserData.first_name}} {{tokenService.currentUserData.last_name}}</h2>
+          <h2 class="program">{{tokenService.currentUserData.program}}</h2>
         </div>
       </div>
+    </div>
+    <div class="col-sm-3 col-md-3 col-lg-3">
+      <job-posting-sidebar></job-posting-sidebar>
     </div>
   </div>
 </div>
