--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -37,3 +37,18 @@
   font-size:0.9em;
   color: rgba(0, 0, 0, .68);
 }
+
+.card-header-text {
+  font-family:Lato-Black;
+  font-size:16px;
+  color:#83868a;
+  letter-spacing:0;
+  text-align:left;
+}
+.club-detail-text {
+  font-family:Lato-Medium;
+  font-size:13px;
+  color: black;
+  letter-spacing:0;
+  text-align:left;
+}
