--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,17 +1,41 @@
 <div class="container-fluid">
   <div class="row justify-content-center">
-    <div class="col-sm-9 col-md-9 col-lg-9">
+    <div class="col-sm-8 col-md-8 col-lg-8">
       <div class="card mt-4">
         <div class="card-img-top">
           <img src="https://s3-us-west-1.amazonaws.com/bgimglibrary/LinkedIn-Background-Image-62.png" class="card-img-top banner-img">
         </div>
         <img src="https://media.giphy.com/media/26gsl2WC5tRxkemdi/giphy.gif" class="profile-img">
         <div class="card-block" style="text-align:center">
+
           <br><br><br>
           <h2 class="name-font">{{tokenService.currentUserData.first_name}} {{tokenService.currentUserData.last_name}}</h2>
           <h2 class="program">{{tokenService.currentUserData.program}}</h2>
         </div>
       </div>
+      <div class="row mt-2">
+        <div class="col-sm-4 col-md-4 col-lg-4">
+          <div class="card sticky">
+            <h3 class="card-header card-header-text">View</h3>
+            <div class="list-group">
+              <button class="list-group-item list-group-item-action py-2" (click)="state = 'about'" [ngClass]="{active: state == 'about'}">About</button>
+              <button class="list-group-item list-group-item-action py-2" (click)="state = 'events'" [ngClass]="{active: state == 'events'}">Events</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-8 col-md-8 col-lg-8 pl-1">
+          <div class="card">
+            <h3 class="card-header card-header-text">About</h3>
+            <div class="card-block">
+              <span class="club-detail-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae lacus tempor, molestie quam ut, ultrices velit. Nulla facilisi. Morbi scelerisque ex ultrices libero sagittis tincidunt. Ut eget neque in elit venenatis euismod sed vestibulum justo. Sed imperdiet libero ut nunc maximus, non fringilla turpis vehicula. Cras nec hendrerit nisi, vitae efficitur ipsum. Suspendisse id orci leo. Suspendisse consequat eleifend bibendum. Integer et arcu arcu. Aliquam finibus sem eget auctor fringilla. Fusce viverra magna sit amet elit ultrices scelerisque. Pellentesque vitae arcu a tortor porta tempor vel quis nulla. Proin quis accumsan lacus.
+              </span>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
     </div>
     <div class="col-sm-3 col-md-3 col-lg-3">
       <job-posting-sidebar></job-posting-sidebar>
