--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -14,7 +14,7 @@ h5 {
     font-size: 1em;
     overflow: hidden;
     padding: 0;
-    border: 1px solid  #83868a;
+    /*border: 1 solid  #83868a;*/
     border-radius: 0;
     /*box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);*/
 }
@@ -189,4 +189,12 @@ h5 {
 }
 .open-positions-icon {
   width:20%;
+}
+
+.card-header-text {
+  font-family:Lato-Black;
+  font-size:16px;
+  color:#83868a;
+  letter-spacing:0;
+  text-align:left;
 }
