--- a/src/app/job-detail-page/job-detail-page.component.html
+++ b/src/app/job-detail-page/job-detail-page.component.html
@@ -18,7 +18,7 @@
         </select>
       </div>
       <div class="form-group" *ngFor="let question of posting.job_posting_questions; let i = index">
-        <label for="exampleInputEmail1"><b>{{question.question}}</b></label>
+        <label for="exampleInputEmail1"><b>{{question.question}}</b></label><br>
         <textarea rows="3" style="width:100%" required [(ngModel)]="jobApplication.job_question_answers_attributes[i].answer"></textarea>
       </div>
       <button type="button" class="btn btn-primary" (click)="submitJobApp()">Submit!</button>
