--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -93,7 +93,7 @@
         </div>
 
         <button type="button" class="btn btn-primary" (click)="addWorkExp()">Add more work experience</button>
-        <button type="button" class="btn btn-danger" name="button" (click)="postUpdates()">Submit!</button>
+        <button type="button" class="btn btn-danger" name="button" (click)="postUpdates()" routerLink="/newsfeed">Submit!</button>
       </div>
     </div>
   </div>
