--- a/src/app/clubs/clubs.component.css
+++ b/src/app/clubs/clubs.component.css
@@ -7,10 +7,10 @@ h2 {margin:1em 0;}
 
 
 .collapse-accordion .card a[data-toggle=collapse] {display: block;padding:.75rem 1.25rem;}
-.collapse-accordion .card-header {padding:0;} 
+.collapse-accordion .card-header {padding:0;}
 
 html {
-    font-family: Lato, 'Helvetica Neue', Arial, Helvetica, sans-serif;
+    font-family: Lato-Regular, 'Helvetica Neue', Arial, Helvetica, sans-serif;
     font-size: 14px;
 }
 
@@ -25,7 +25,7 @@ h3 {
 	font-weight: 700;
 	font-size: 30px;
 	margin-bottom: 0;
-	font-family: Montserrat, sans-serif;
+	font-family: Lato-Black, sans-serif;
 	color:#000000;
 	letter-spacing:0;
 	text-align:left;
@@ -34,18 +34,23 @@ h3 {
 h6 {
 	font-weight: 500;
 	font-size: 16px;
-	font-family: Montserrat, sans-serif;
+	font-family: Lato-Regular, sans-serif;
 	color:#000000;
 	letter-spacing:0;
 	text-align:left;
 	margin-bottom: 0;
-	margin-top: 30px; 
+	margin-top: 30px;
 }
 
 .card {
 	border-left: 1px solid darkgrey;
 	border-right: 1px solid darkgrey;
 	border-radius: 0;
+}
+
+.title {
+  font-family:Lato-Black;
+  font-size:1.3em;
 }
 
 .content-header {
@@ -64,8 +69,8 @@ h6 {
 }
 
 .logo {
-	width: 100%;
-	height: 100%;
+	width: 75%;
+	height: auto;
 }
 
 .line-clamp-wrapper {
@@ -82,8 +87,8 @@ h6 {
 
 .club-description {
 	font-weight: 300;
-	font-size: 12px;
-	font-family: Montserrat, sans-serif;
+	font-size: 13px;
+	font-family: Lato-Regular;
 	color:#000000;
 	letter-spacing:0;
 	text-align:left;
@@ -91,9 +96,8 @@ h6 {
 
 .tags {
 	font-weight: 200;
-	font-style: italic;
-	font-size:12px;
-	font-family: Montserrat, sans-serif;
+	font-size:1em;
+	font-family: Lato-Regular;
 	color:#83868a;
 	letter-spacing:0;
 	margin: 0;
